syntax = "proto3";

option go_package = "github.com/gireesh-devtron/totality/server/grpc/client";


message UsersRequest {
  repeated UserRequest userRequests = 1;
}
message UserRequest{
  int32 id = 1;
}
message UsersResponse{
  repeated UserResponse userResponses = 1;
}

message UserResponse{
  int32 id = 1;
  string firstName = 2;
  string city      =3;
  string phone     =4;
  fixed32 height   =5 ;
  bool married   =6;
}

service UserService{
  rpc GetUsers(UsersRequest) returns ( UsersResponse){}
  rpc GetUser(UserRequest) returns(UserResponse){}
}